--- a/report.tex
+++ b/report.tex
@@ -408,7 +408,7 @@ associated with that synapse. This opens up areas for online learning.
 
 \chapter{Event-driven Visual-Tactile Sensing and Learning for Robots\label{cha:vtsnn}}
 
-In \autoref{cha:intro}, we have alluded to VT-SNN, an event-driven
+In the introduction, we have alluded to VT-SNN, an event-driven
 visual-tactile perception system using spiking neural networks. This chapter
 describes the work done on that project. In \autoref{sec:snnrl_related}, we
 discuss the prior art for visual-tactile systems. In \autoref{sec:snnrl_vtsnn},
@@ -454,25 +454,8 @@ This work has been submitted to ROS 2020.
 
 \chapter{Reinforcement learning in Spiking Neural Networks\label{cha:snnrl}}
 
-To achieve the first milestone (see \autoref{sec:milestones}), I begin this
-research project by conducting a survey on SNN architectures that use gradients
-and have code readily available. We have found 2 repositories:
-
-\begin{enumerate}
-\item
-\href{https://github.com/google/ihmehimmeli}{ihmehimmeli}~\cite{comsa19_tempor_codin_spikin_neural_networ}
-\item
-\href{https://github.com/bamsumit/slayerPytorch/}{SLAYER}~\cite{NIPS2018_7415}
-\end{enumerate}
-
-We establish baselines, and evaluate these models on the STMNIST dataset.
-
-It must be noted that the small number of samples in this dataset results in
-large error bars for each of the experiments conducted, and more samples must be
-collected before any conclusions are statistically significant. My experiments
-were run before the STMNIST dataset was updated. I have included my experimental
-results on this small dataset, as well as experimental results attained
-independently on the larger dataset for posterity.
+% TODO Introduction
+% TODO RL survey
 
 \subsection{The Cartpole Environment}
 
